# Release

./: .gitignore  LICENSE_ExtraCondition  Project.md  README.md  TODO.md  TODO_Animation.md  TODO_ParserGen.md  TODO_StateMachine.md
.github/: Project.md  bot.md  copilot-instructions.md
.github/TaskLogs/: Copilot_Investigate.md
.github/prompts/: win-4-execution.prompt.md  win-5-verifying.prompt.md  win-code.prompt.md
Import/: CMakeLists.txt  GacUI.Windows.cpp  GacUI.cpp  GacUI.h  GacUIWindows.cpp  Import.bat  README.md  TODO.md  VlppRegex.cpp  VlppWorkflowCompiler.cpp  VlppWorkflowCompiler.h  VlppWorkflowLibrary.h  vlpp.natvis
Import/Metadata/: JsonAst_Json.d.ts  Rpc.d.ts  WorkflowAst_Json.d.ts  XmlAst_Json.d.ts
SampleForDoc/GacUI/: GacUI.sln  README.md
SampleForDoc/GacUI/RunResource/: GuiMain.cpp  Resource.rc  RunResource.vcxproj  RunResource.vcxproj.filters
SampleForDoc/GacUI/XmlRes/: GacUI.xml
Tools/: .gitignore  BuildExecutables.sh  CopyExecutables.ps1  Deploy.bat  GacBuild.ps1  GacClear.ps1  GacCommon.ps1  GacGen.bat  GacGen.ps1  GacMerge.bat  README.md  RunAndLock.bat  StartProcess.ps1  WaitForLock.bat
Tools/Executables/: Executables.sln
Tools/Executables/CodePack/: CodePack.vcxproj  CodePack.vcxproj.filters  Codepack.h  Codepack_CategorizeCodeFiles.cpp  Codepack_Combine.cpp  Codepack_GetFiles.cpp  Codepack_GetIncludeFiles.cpp  Main.cpp  makefile  vmake
Tools/Executables/CppMerge/: CppMerge.vcxproj  CppMerge.vcxproj.filters  Main.cpp  WfMergeCpp.cpp  WfMergeCpp.h  makefile  vmake
Tools/Executables/GacGen/: GacGen.vcxproj  GacGen.vcxproj.filters  makefile  vmake
Tools/Executables/GlrParserGen/: GlrParserGen.vcxproj  GlrParserGen.vcxproj.filters  Main.cpp  makefile  vmake
Tutorial/: Codegen.bat  GacUI.xml  README.md
Tutorial/Console_Workflow/: Console_Workflow.sln
Tutorial/Console_Workflow/Lib/: Lib.vcxproj  Lib.vcxproj.filters
Tutorial/Console_Workflow/W01_RunningWorkflowScripts/: Main.cpp  W01_RunningWorkflowScripts.vcxproj
Tutorial/Console_Workflow/W02_InvokingCppClasses/: Main.cpp  W02_InvokingCppClasses.vcxproj
Tutorial/Console_Workflow/W03_InheritingCppInterfaces/: Main.cpp  W03_InheritingCppInterfaces.vcxproj
Tutorial/Console_Workflow/W04_InheritingCppClasses/: Main.cpp  W04_InheritingCppClasses.vcxproj  W04_InheritingCppClasses.vcxproj.filters
Tutorial/Console_Workflow/W05_Compile/: Main.cpp  W05_Compile.vcxproj  W05_Compile.vcxproj.filters
Tutorial/Console_Workflow/W05_DynamicRun/: Main.cpp  W05_DynamicRun.vcxproj  W05_DynamicRun.vcxproj.filters
Tutorial/Console_Workflow/W05_Lib/: W05_Lib.cpp  W05_Lib.h  W05_Lib.vcxproj
Tutorial/Console_Workflow/W05_StaticRun/: Main.cpp  W05_StaticRun.vcxproj  W05_StaticRun.vcxproj.filters
Tutorial/Console_Workflow/W06_Debugging/: Main.cpp  W06_Debugging.vcxproj
Tutorial/GacUI_ControlTemplate/: Codegen.bat  GacUI_ControlTemplate.sln
Tutorial/GacUI_ControlTemplate/BlackSkin/: BlackSkin.vcxproj  BlackSkin.vcxproj.filters  Main.cpp
Tutorial/GacUI_ControlTemplate/WindowSkin/: Main.cpp  WindowSkin.vcxproj  WindowSkin.vcxproj.filters
Tutorial/GacUI_Controls/: Codegen.bat  GacUI_Controls.sln
Tutorial/GacUI_Controls/AddressBook/: AddressBook.vcxproj  AddressBook.vcxproj.filters  Main.cpp
Tutorial/GacUI_Controls/Animation/: Animation.vcxproj  Animation.vcxproj.filters  Main.cpp
Tutorial/GacUI_Controls/CalculatorAndStateMachine/: CalculatorAndStateMachine.vcxproj  CalculatorAndStateMachine.vcxproj.filters  Main.cpp
Tutorial/GacUI_Controls/ColorPicker/: ColorPicker.vcxproj  ColorPicker.vcxproj.filters  Main.cpp
Tutorial/GacUI_Controls/ColorPicker2/: ColorPicker2.vcxproj  ColorPicker2.vcxproj.filters  Main.cpp
Tutorial/GacUI_Controls/ContainersAndButtons/: ContainersAndButtons.vcxproj  ContainersAndButtons.vcxproj.filters  Main.cpp
Tutorial/GacUI_Controls/DataGrid/: DataGrid.vcxproj  DataGrid.vcxproj.filters  Main.cpp
Tutorial/GacUI_Controls/Dialogs/: Dialogs.vcxproj  Dialogs.vcxproj.filters  Main.cpp
Tutorial/GacUI_Controls/DocumentEditor/: DocumentEditor.vcxproj  DocumentEditor.vcxproj.filters  Main.cpp
Tutorial/GacUI_Controls/DocumentEditorRibbon/: DocumentEditorRibbon.vcxproj  DocumentEditorRibbon.vcxproj.filters  Main.cpp
Tutorial/GacUI_Controls/DocumentEditorToolstrip/: DocumentEditorToolstrip.vcxproj  DocumentEditorToolstrip.vcxproj.filters  Main.cpp
Tutorial/GacUI_Controls/GlobalHotKey/: GlobalHotKey.vcxproj  GlobalHotKey.vcxproj.filters  Main.cpp
Tutorial/GacUI_Controls/ListControls/: ListControls.vcxproj  ListControls.vcxproj.filters  Main.cpp
Tutorial/GacUI_Controls/Localization/: Localization.vcxproj  Localization.vcxproj.filters  Main.cpp
Tutorial/GacUI_Controls/MenuVisibility/: Main.cpp  MenuVisibility.vcxproj  MenuVisibility.vcxproj.filters
Tutorial/GacUI_Controls/ProgressAndAsync/: Main.cpp  ProgressAndAsync.vcxproj  ProgressAndAsync.vcxproj.filters
Tutorial/GacUI_Controls/QueryService/: Main.cpp  QueryService.vcxproj  QueryService.vcxproj.filters
Tutorial/GacUI_Controls/TextEditor/: Main.cpp  TextEditor.vcxproj  TextEditor.vcxproj.filters  Utilities.h
Tutorial/GacUI_Controls/TriplePhaseImageButton/: Main.cpp  TriplePhaseImageButton.vcxproj  TriplePhaseImageButton.vcxproj.filters
Tutorial/GacUI_Controls/Win11ToolstripMenu/: Main.cpp  Win11ToolstripMenu.vcxproj  Win11ToolstripMenu.vcxproj.filters
Tutorial/GacUI_HelloWorlds/: Codegen.bat  GacUI_HelloWorlds.sln
Tutorial/GacUI_HelloWorlds/Cpp/: Cpp.vcxproj  Main.cpp
Tutorial/GacUI_HelloWorlds/CppXml/: CppXml.vcxproj  CppXml.vcxproj.filters  Main.cpp  WinMain.cpp
Tutorial/GacUI_HelloWorlds/MVVM/: MVVM.vcxproj  MVVM.vcxproj.filters  Main.cpp
Tutorial/GacUI_HelloWorlds/UIRes/: Xml.bin.x64  Xml.bin.x86
Tutorial/GacUI_HelloWorlds/WorkflowScript/: Main.cpp  WorkflowScript.vcxproj
Tutorial/GacUI_HelloWorlds/Xml/: Main.cpp  Xml.vcxproj  Xml.vcxproj.filters
Tutorial/GacUI_Layout/: Codegen.bat  GacUI_Layout.sln
Tutorial/GacUI_Windows/: Direct2DClock.sln  GacUI_Windows.sln
Tutorial/GacUI_Xml/: Codegen.bat  GacUI_Xml.sln
Tutorial/Lib/: FakeResource.xml  Lib.sln
(+487 files in other folders)
